--- a/assets/components.json
+++ b/assets/components.json
@@ -252,9 +252,11 @@
                                                 "users": "People",
                                                 "briefcase": "Business",
                                                 "calendar": "Calendar",
+                                                "flag-checkered": "Checkered Flag",
                                                 "clock": "Clock",
                                                 "phone": "Phone",
-                                                "money-bill-wave": "Money"
+                                                "money-bill-wave": "Money",
+                                                "route": "Route"
                                             }
                                         }
                                     }
@@ -343,9 +345,11 @@
                                                 "users": "People",
                                                 "briefcase": "Business",
                                                 "calendar": "Calendar",
+                                                "flag-checkered": "Checkered Flag",
                                                 "clock": "Clock",
                                                 "phone": "Phone",
-                                                "money-bill-wave": "Money"
+                                                "money-bill-wave": "Money",
+                                                "route": "Route"
                                             }
                                         }
                                     }
@@ -423,9 +427,11 @@
                                                 "users": "People",
                                                 "briefcase": "Business",
                                                 "calendar": "Calendar",
+                                                "flag-checkered": "Checkered Flag",
                                                 "clock": "Clock",
                                                 "phone": "Phone",
-                                                "money-bill-wave": "Money"
+                                                "money-bill-wave": "Money",
+                                                "route": "Route"
                                             }
                                         }
                                     },
@@ -680,9 +686,11 @@
                                                 "users": "People",
                                                 "briefcase": "Business",
                                                 "calendar": "Calendar",
+                                                "flag-checkered": "Checkered Flag",
                                                 "clock": "Clock",
                                                 "phone": "Phone",
-                                                "money-bill-wave": "Money"
+                                                "money-bill-wave": "Money",
+                                                "route": "Route"
                                             }
                                         }
                                     }
@@ -753,9 +761,11 @@
                                                 "users": "People",
                                                 "briefcase": "Business",
                                                 "calendar": "Calendar",
+                                                "flag-checkered": "Checkered Flag",
                                                 "clock": "Clock",
                                                 "phone": "Phone",
-                                                "money-bill-wave": "Money"
+                                                "money-bill-wave": "Money",
+                                                "route": "Route"
                                             }
                                         }
                                     }
@@ -1971,7 +1981,8 @@
                         "flag-checkered": "Checkered Flag",
                         "clock": "Clock",
                         "phone": "Phone",
-                        "money-bill-wave": "Money"
+                        "money-bill-wave": "Money",
+                        "route": "Route"
                     }
                 },
                 "width": "1-1",
@@ -2011,6 +2022,25 @@
                             "name": "description",
                             "label": "Description",
                             "type": "wysiwyg"
+                        },
+                        {
+                            "name": "icon",
+                            "label": "Icon",
+                            "type": "select",
+                            "options": {
+                                "options": {
+                                    "envelope": "Envelope",
+                                    "user": "Person",
+                                    "users": "People",
+                                    "briefcase": "Business",
+                                    "calendar": "Calendar",
+                                    "flag-checkered": "Checkered Flag",
+                                    "clock": "Clock",
+                                    "phone": "Phone",
+                                    "money-bill-wave": "Money",
+                                    "route": "Route"
+                                }
+                            }
                         }
                     ]
                 },
