Add helmet to icon choices

--- a/assets/components.json
+++ b/assets/components.json
@@ -254,6 +254,7 @@
                                                 "calendar": "Calendar",
                                                 "flag-checkered": "Checkered Flag",
                                                 "clock": "Clock",
+                                                "hard-hat": "Helmet",
                                                 "phone": "Phone",
                                                 "money-bill-wave": "Money",
                                                 "route": "Route"
@@ -347,6 +348,7 @@
                                                 "calendar": "Calendar",
                                                 "flag-checkered": "Checkered Flag",
                                                 "clock": "Clock",
+                                                "hard-hat": "Helmet",
                                                 "phone": "Phone",
                                                 "money-bill-wave": "Money",
                                                 "route": "Route"
@@ -429,6 +431,7 @@
                                                 "calendar": "Calendar",
                                                 "flag-checkered": "Checkered Flag",
                                                 "clock": "Clock",
+                                                "hard-hat": "Helmet",
                                                 "phone": "Phone",
                                                 "money-bill-wave": "Money",
                                                 "route": "Route"
@@ -688,6 +691,7 @@
                                                 "calendar": "Calendar",
                                                 "flag-checkered": "Checkered Flag",
                                                 "clock": "Clock",
+                                                "hard-hat": "Helmet",
                                                 "phone": "Phone",
                                                 "money-bill-wave": "Money",
                                                 "route": "Route"
@@ -763,6 +767,7 @@
                                                 "calendar": "Calendar",
                                                 "flag-checkered": "Checkered Flag",
                                                 "clock": "Clock",
+                                                "hard-hat": "Helmet",
                                                 "phone": "Phone",
                                                 "money-bill-wave": "Money",
                                                 "route": "Route"
@@ -1980,6 +1985,7 @@
                         "calendar": "Calendar",
                         "flag-checkered": "Checkered Flag",
                         "clock": "Clock",
+                        "hard-hat": "Helmet",
                         "phone": "Phone",
                         "money-bill-wave": "Money",
                         "route": "Route"
@@ -2036,6 +2042,7 @@
                                     "calendar": "Calendar",
                                     "flag-checkered": "Checkered Flag",
                                     "clock": "Clock",
+                                    "hard-hat": "Helmet",
                                     "phone": "Phone",
                                     "money-bill-wave": "Money",
                                     "route": "Route"
@@ -2096,6 +2103,7 @@
                                     "calendar": "Calendar",
                                     "flag-checkered": "Checkered Flag",
                                     "clock": "Clock",
+                                    "hard-hat": "Helmet",
                                     "phone": "Phone",
                                     "money-bill-wave": "Money",
                                     "route": "Route"
