Add icons to icon list

--- a/assets/components.json
+++ b/assets/components.json
@@ -1789,20 +1789,23 @@
                                     "type": "select",
                                     "label": "Icon",
                                     "options": {
-                                        "options": [
-                                            {
-                                                "value": "clock",
-                                                "label": "Clock"
-                                            },
-                                            {
-                                                "value": "route",
-                                                "label": "Route"
-                                            },
-                                            {
-                                                "value": "person-sign",
-                                                "label": "Guide"
-                                            }
-                                        ]
+                                        "options": {
+                                            "envelope": "Envelope",
+                                            "user": "Person",
+                                            "users": "People",
+                                            "briefcase": "Business",
+                                            "camera-retro": "Camera",
+                                            "calendar": "Calendar",
+                                            "flag-checkered": "Checkered Flag",
+                                            "clock": "Clock",
+                                            "hard-hat": "Helmet",
+                                            "phone": "Phone",
+                                            "money-bill-wave": "Money",
+                                            "route": "Route",
+                                            "shemagh": "Shemagh Face Covering (custom)",
+                                            "ticket-alt": "Ticket",
+                                            "water-bottle": "Water Bottle (custom)"
+                                        }
                                     }
                                 }
                             ]
