--- a/assets/components.json
+++ b/assets/components.json
@@ -1771,13 +1771,14 @@
                 "info": "",
                 "group": "",
                 "localize": false,
+                "display": "display",
                 "options": {
                     "field": {
                         "type": "set",
                         "name": "icon",
                         "label": "Icon",
+                        "display": "name",
                         "options": {
-                            "display": "name",
                             "limit": 4,
                             "fields": [
                                 {
