--- a/assets/components.json
+++ b/assets/components.json
@@ -906,6 +906,19 @@
                 "acl": []
             },
             {
+                "name": "title2",
+                "label": "title2",
+                "type": "text",
+                "default": "",
+                "info": "Title Continued (Optional)",
+                "group": "",
+                "localize": false,
+                "options": [],
+                "width": "1-1",
+                "lst": true,
+                "acl": []
+            },
+            {
                 "name": "subtitle",
                 "label": "Subtitle",
                 "type": "text",
