Allow multiple images

--- a/assets/components.json
+++ b/assets/components.json
@@ -1067,7 +1067,9 @@
                 "info": "",
                 "group": "Background",
                 "localize": false,
-                "options": [],
+                "options": {
+                    "multiple": true
+                },
                 "width": "1-1",
                 "lst": true,
                 "acl": []
