Make icon description multiline

--- a/assets/components.json
+++ b/assets/components.json
@@ -1860,7 +1860,7 @@
                                 },
                                 {
                                     "name": "description",
-                                    "type": "text",
+                                    "type": "textarea",
                                     "label": "Description"
                                 },
                                 {
