--- a/assets/components.json
+++ b/assets/components.json
@@ -257,6 +257,7 @@
                                                 "flag-checkered": "Checkered Flag",
                                                 "clock": "Clock",
                                                 "hard-hat": "Helmet",
+                                                "hotel": "Hotel",
                                                 "phone": "Phone",
                                                 "puzzle-piece": "Puzzle Piece",
                                                 "money-bill-wave": "Money",
@@ -357,6 +358,7 @@
                                                 "flag-checkered": "Checkered Flag",
                                                 "clock": "Clock",
                                                 "hard-hat": "Helmet",
+                                                "hotel": "Hotel",
                                                 "phone": "Phone",
                                                 "puzzle-piece": "Puzzle Piece",
                                                 "money-bill-wave": "Money",
@@ -446,6 +448,7 @@
                                                 "flag-checkered": "Checkered Flag",
                                                 "clock": "Clock",
                                                 "hard-hat": "Helmet",
+                                                "hotel": "Hotel",
                                                 "phone": "Phone",
                                                 "puzzle-piece": "Puzzle Piece",
                                                 "money-bill-wave": "Money",
@@ -712,6 +715,7 @@
                                                 "flag-checkered": "Checkered Flag",
                                                 "clock": "Clock",
                                                 "hard-hat": "Helmet",
+                                                "hotel": "Hotel",
                                                 "phone": "Phone",
                                                 "puzzle-piece": "Puzzle Piece",
                                                 "money-bill-wave": "Money",
@@ -794,6 +798,7 @@
                                                 "flag-checkered": "Checkered Flag",
                                                 "clock": "Clock",
                                                 "hard-hat": "Helmet",
+                                                "hotel": "Hotel",
                                                 "phone": "Phone",
                                                 "puzzle-piece": "Puzzle Piece",
                                                 "money-bill-wave": "Money",
